--- a/src/app/dashboard/audit-plan/view-plan/view-plan-assign/view-plan-assign.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-assign/view-plan-assign.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-12">
-        <div class="card" ng-show="myVar2==true">
+        <div class="card">
           <div class="card-header">
             <div class="header_card">
               <h3 class="card-title">View Plan Details</h3>
