--- a/src/app/dashboard/manage-audit/manage-audit-initiate/manage-audit-initiate.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-initiate/manage-audit-initiate.component.html
@@ -14,17 +14,19 @@
                             <div class="col-sm-4">
                                 <div class="form-group">
                                     <label class="form_label">Vendor Name</label>
-                                    <select class="form-control" formControlName="vendorId">
+                                    <input type="text" class="form-control inputbox_css" formControlName="vendorName">
+                                   <!--  <select class="form-control" formControlName="vendorId">
                                         <option *ngFor="let item of vendorObj" [value]="item.id"> {{item.name }}</option>
-                                    </select>
+                                    </select> -->
                                 </div>
                             </div>
                             <div class="col-sm-4">
                                 <div class="form-group">
                                     <label class="form_label">Vendor Code</label>
-                                    <select class="form-control" formControlName="vendorId">
+                                    <input type="text" class="form-control inputbox_css" formControlName="vendorCode">
+                                   <!--  <select class="form-control" formControlName="vendorId">
                                         <option *ngFor="let item of vendorObj" [value]="item.id"> {{item.code }}</option>
-                                    </select>
+                                    </select> -->
                                 </div>
                             </div>
                             <div class="col-sm-4">
