--- a/src/app/dashboard/action-plan/action-plan-auditor/action-plan-auditor.component.html
+++ b/src/app/dashboard/action-plan/action-plan-auditor/action-plan-auditor.component.html
@@ -1,4 +1,4 @@
-<section class="content">
+<!-- <section class="content">
     <div class="container-fluid">
         <div class="row">
             <div class="col-12">
@@ -29,36 +29,81 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr class="tbody_data">
+                                   <tr class="tbody_data">                   
                                      <td></td>
                                      <td></td>
                                      <td></td>
                                      <td></td>
                                      <td></td>
-                                     <td></td>
-                                   
-                                    
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
                         <nav aria-label="Page navigation example">
-                            <ul class="pagination justift_end">
-                                <li class="page-item">
-                                    <a class="page-link"  aria-label="Previous">
-                                        <span aria-hidden="true">&laquo;</span>
-                                    </a>
-                                </li>
-                                <li class="page-item"><a class="page-link" >1</a></li>
-                                <li class="page-item"><a class="page-link" >2</a></li>
-                                <li class="page-item"><a class="page-link" >3</a></li>
-                                <li class="page-item">
-                                    <a class="page-link"  aria-label="Next">
-                                        <span aria-hidden="true">&raquo;</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
+                            <div class="pagination justift_end">
+                              <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
+                            </div>
+                          </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section> -->
+
+<section class="content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="header_card">
+                            <h3 class="card-title">Audit Area Details</h3>
+                            <div class="d-flex align-items-center">
+                                <h6 class="mr-1 mb-0">Filters:-</h6>
+                                <input type="text" class="form-control mr-1 filter_css" placeholder="Vendor Name ">
+                                <input type="text" class="form-control mr-1 filter_css" placeholder="Date ">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive max_hei_table">
+                            <table id="" class="table table-bordered table-hover">
+                                <thead>
+                                    <tr class=" text-center sticky_header">
+                                        <th>Audit No</th>
+                                        <th>Vendor Code </th>
+                                        <th>Vendor Name</th>
+                                        <th>Planned Start Date </th>
+                                        <th>Planned End Date</th>
+                                        <th>No Of Observation</th>
+                                        <th>Categories</th>
+                                        <th>Score</th>
+                                        <th>Action Plan </th>    
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr class="tbody_data" *ngFor="let item of auditPlanList| paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index">
+                                        <td>AU{{(i+1) + pagination.pageSize * ( pagination.pageNumber-1 ) }}</td>
+                                        <td>{{item.vendorCode}}</td>
+                                        <td>{{item.vendorName}}</td>
+                                        <td>{{item.plannedStartDate | date:dateFormat}}</td>
+                                        <td>{{item.plannedEndDate | date:dateFormat}}</td>
+                                        <td>{{item.observationCount}}</td>
+                                        <td>{{item.categories}}</td>
+                                        <td><button class="btn btn-success" data-toggle="tooltip" data-placement="top" title="Tooltip on top">59%</button></td>
+                                        <td>
+                                            <button (click)="goToCategory(item.id)" class="btn btn-primary"data-toggle="tooltip" data-placement="top" title="Tooltip on top">To be Submitted</button>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <nav aria-label="Page navigation example">
+                            <div class="pagination justift_end">
+                              <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
+                            </div>
+                          </nav>
                     </div>
                 </div>
             </div>
