--- a/src/app/dashboard/action-plan/action-plan-list/action-plan-list.component.html
+++ b/src/app/dashboard/action-plan/action-plan-list/action-plan-list.component.html
@@ -30,8 +30,8 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr class="tbody_data" *ngFor="let item of auditPlanList; let i = index;">
-                                        <td>AU{{i+1}}</td>
+                                    <tr class="tbody_data" *ngFor="let item of auditPlanList| paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index">
+                                        <td>AU{{(i+1) + pagination.pageSize * ( pagination.pageNumber-1 ) }}</td>
                                         <td>{{item.vendorCode}}</td>
                                         <td>{{item.vendorName}}</td>
                                         <td>{{item.plannedStartDate | date:dateFormat}}</td>
@@ -73,22 +73,10 @@
                             </table>
                         </div>
                         <nav aria-label="Page navigation example">
-                            <ul class="pagination justift_end">
-                                <li class="page-item">
-                                    <a class="page-link"  aria-label="Previous">
-                                        <span aria-hidden="true">&laquo;</span>
-                                    </a>
-                                </li>
-                                <li class="page-item"><a class="page-link" >1</a></li>
-                                <li class="page-item"><a class="page-link" >2</a></li>
-                                <li class="page-item"><a class="page-link" >3</a></li>
-                                <li class="page-item">
-                                    <a class="page-link"  aria-label="Next">
-                                        <span aria-hidden="true">&raquo;</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
+                            <div class="pagination justift_end">
+                              <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
+                            </div>
+                          </nav>
                     </div>
                 </div>
             </div>
