--- a/src/app/dashboard/action-plan/pending-action-plan/pending-action-plan.component.html
+++ b/src/app/dashboard/action-plan/pending-action-plan/pending-action-plan.component.html
@@ -25,8 +25,8 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="tbody_data" *ngFor="let item of actionPlanList; let i = index;">
-                        <td>{{i+1}}</td>
+                    <tr class="tbody_data" *ngFor="let item of actionPlanList| paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index">
+                        <td>{{(i+1) + pagination.pageSize * ( pagination.pageNumber-1 ) }}</td>    
                         <td>{{i+1}}</td>
                         <td>{{i+1}}.1</td>
                         <td>{{item.detailOfImprovement}}</td>
@@ -40,22 +40,10 @@
             </table>
         </div>
         <nav aria-label="Page navigation example">
-            <ul class="pagination justift_end">
-                <li class="page-item">
-                    <a class="page-link"  aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
-                </li>
-                <li class="page-item"><a class="page-link" >1</a></li>
-                <li class="page-item"><a class="page-link" >2</a></li>
-                <li class="page-item"><a class="page-link" >3</a></li>
-                <li class="page-item">
-                    <a class="page-link"  aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
+            <div class="pagination justift_end">
+              <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
+            </div>
+          </nav>
     </div>
     <div class="card-footer">
         <button class="btn btn-default" (click)="close()">Back</button>
