--- a/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
@@ -118,7 +118,7 @@
                             </div>
                         </div>
                         <div class="card-footer" *ngIf="isSuperAdmin">
-                            <button class="btn btn-primary" (click)="submit()">Submit</button>
+                            <!-- <button class="btn btn-primary" (click)="submit()">Submit</button> -->
                             <button class="btn btn-default" (click)="close()">Back</button>
                         </div>
                     </form>
