--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,114 +1,66 @@
-
-
 <div class="container-fluid pt-2">
-
-    <div class="row">
-      <div class="col-12">
-        <div class="card">
-          <div class="card-header">
-            <div class="header_card">
-              <h3 class="card-title">Dashboard</h3>
-            
-             
-              </select>
-              </div>
-           
+  <div class="row">
+    <div class="col-12">
+      <div class="card">
+        <div class="card-header">
+          <div class="header_card">
+            <h3 class="card-title">Dashboard</h3>
           </div>
-          <!-- /.card-header -->
-          <div class="card-body"  *ngIf="!isVendor">
-          
-<!-- <div class="d-flex justify-content-center mb-4 flex_direction_media">
-  <a href="" class="child_counter ">
-    <div class="">
-      <div class="d-flex justify-content-between align-items-center">
-        <img src="../../../../assets/icons/counter/shield.png" class="counter_img gradien_plan">
-        <p class="color_black mb-0 fon_17 font_wei_500">Total Audits</p>
-      </div>
-      <div>
-        <p class="counter_digit">8</p>
-        <a href=""></a>
-      </div>
-    </div>
-    <div>
-      <p class="counter_digit">8</p>
-      <a href=""></a>
-    </div>
-  </div>
-</a>
-<a href="" class="child_counter ">
-  <div class="">
-    <div class="d-flex justify-content-between align-items-center">
-      <img src="../../../../assets/icons/counter/approve.png" class="counter_img gradien_approve">
-      <p class="color_black mb-0 fon_17 font_wei_500">Approve Audits</p>
-    </div>
-    <div>
-      <p class="counter_digit">6</p>
-      <a href=""></a>
-    </div>
-  </a>
-</div> -->
-<div class="row">
-  <div class="col-sm-8">
-    <canvas baseChart [data]="actionPlanData" height="100%" [type]="'bar'" [options]="actionPlanOptions">
-    </canvas>
-    </div>
-  <div class="col-sm-4">
-    <canvas baseChart [data]="pieChartData" [type]="'pie'" [options]="pieChartOptions">
-    </canvas>
-</div>
-<div class="col-sm-4">
-  <canvas baseChart [data]="pieChartData1" [type]="'pie'" [options]="pieChartOptions1">
-  </canvas>
-</div>
-
-</div>
-
-
-          </div>
-          <!-- /.card-body -->
         </div>
-        <!-- /.card -->
-        <!-- /.card -->
+        <div class="card-body" *ngIf="!isVendor">
+          <div class="row">
+            <div class="col-sm-8">
+              <canvas baseChart [data]="actionPlanData" height="100%" [type]="'bar'" [options]="actionPlanOptions">
+              </canvas>
+            </div>
+            <div class="col-sm-4">
+              <canvas baseChart [data]="pieChartData" [type]="'pie'" [options]="pieChartOptions">
+              </canvas>
+            </div>
+            <div class="col-sm-4">
+              <canvas baseChart [data]="pieChartData1" [type]="'pie'" [options]="pieChartOptions1">
+              </canvas>
+            </div>
+          </div>
+        </div>
       </div>
-      <!-- /.col -->
     </div>
   </div>
-
-
-  <script>
-    const ctx = document.getElementById('myChart');
-    const myChart = new Chart(ctx, {
-        type: 'bar',
-        data: {
-            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-            datasets: [{
-                label: '# of Votes',
-                data: [12, 19, 3, 5, 2, 3],
-                backgroundColor: [
-                    'rgba(255, 99, 132, 0.2)',
-                    'rgba(54, 162, 235, 0.2)',
-                    'rgba(255, 206, 86, 0.2)',
-                    'rgba(75, 192, 192, 0.2)',
-                    'rgba(153, 102, 255, 0.2)',
-                    'rgba(255, 159, 64, 0.2)'
-                ],
-                borderColor: [
-                    'rgba(255, 99, 132, 1)',
-                    'rgba(54, 162, 235, 1)',
-                    'rgba(255, 206, 86, 1)',
-                    'rgba(75, 192, 192, 1)',
-                    'rgba(153, 102, 255, 1)',
-                    'rgba(255, 159, 64, 1)'
-                ],
-                borderWidth: 1
-            }]
-        },
-        options: {
-            scales: {
-                y: {
-                    beginAtZero: true
-                }
-            }
+</div>
+<!-- <script>
+  const ctx = document.getElementById('myChart');
+  const myChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+      labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+      datasets: [{
+        label: '# of Votes',
+        data: [12, 19, 3, 5, 2, 3],
+        backgroundColor: [
+          'rgba(255, 99, 132, 0.2)',
+          'rgba(54, 162, 235, 0.2)',
+          'rgba(255, 206, 86, 0.2)',
+          'rgba(75, 192, 192, 0.2)',
+          'rgba(153, 102, 255, 0.2)',
+          'rgba(255, 159, 64, 0.2)'
+        ],
+        borderColor: [
+          'rgba(255, 99, 132, 1)',
+          'rgba(54, 162, 235, 1)',
+          'rgba(255, 206, 86, 1)',
+          'rgba(75, 192, 192, 1)',
+          'rgba(153, 102, 255, 1)',
+          'rgba(255, 159, 64, 1)'
+        ],
+        borderWidth: 1
+      }]
+    },
+    options: {
+      scales: {
+        y: {
+          beginAtZero: true
         }
-    });
-    </script>
+      }
+    }
+  });
+</script> -->
