--- a/src/app/dashboard/evidence/evidence-received/evidence-received.component.html
+++ b/src/app/dashboard/evidence/evidence-received/evidence-received.component.html
@@ -4,13 +4,13 @@
             <h3 class="card-title">Regulation for initial production control </h3>
             <div class="form-group mb-0 w_26">
                 <select class="form-control filter_css">
-                    <option > Select Vendor Name</option>
-                    <option >  Vendor1</option>
-                    <option >  Vendor1</option>
-                    <option >  Vendor1</option>
-                    <option >  Vendor1</option> 
-                    <option >  Vendor1</option> 
-                    <option >  Vendor1</option>
+                    <option>Select Vendor Name</option>
+                    <option>Vendor1</option>
+                    <option>Vendor1</option>
+                    <option>Vendor1</option>
+                    <option>Vendor1</option> 
+                    <option>Vendor1</option> 
+                    <option>Vendor1</option>
                 </select>
             </div>
         </div>
@@ -35,8 +35,8 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="tbody_data" *ngFor="let item of actionPlanList; let i = index;">
-                        <td>{{i+1}}</td>
+                    <tr class="tbody_data" *ngFor="let item of actionPlanList| paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index">
+                        <td>{{(i+1) + pagination.pageSize * ( pagination.pageNumber-1 ) }}</td>    
                         <td>{{i+1}}</td>
                         <td>{{i+1}}.1</td>
                         <td>{{item.remarkOfAuditor}}</td>
@@ -52,67 +52,30 @@
                            (click)="observeAction(2,item.id)">Partially Close</button>
                         </td>
                     </tr>
-     <!--                <tr class="tbody_data">
-                        <td>2</td>
-                        <td><textarea class="form-control">Prefield Data</textarea></td>
-                        <td><textarea class="form-control">Prefield Data</textarea></td>
-                        <td><textarea class="form-control">Prefield Data</textarea></td>
-                        <td><textarea class="form-control">Prefield Data</textarea></td>
-                        <td><textarea class="form-control">Prefield Data</textarea></td>
-                        <td><textarea class="form-control">Prefield Data</textarea></td>
-                        <td><a href=""><span class="mr-1">Test Link,</span><span>TestLink</span></a></td>
-                        <td>
-                            <button class="btn btn-success mr-1" data-toggle="modal" data-target="#exampleModal"
-                             (click)="observeAction('1')">Open</button>
-                            <button class="btn btn-danger  mr-1" data-toggle="modal" data-target="#exampleModal"
-                            (click)="observeAction('3')">Close</button>
-                            <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
-                            (click)="observeAction('2')">Partially Close</button>
-                        </td>
-                    </tr> -->
                 </tbody>
             </table>
         </div>
-        
         <nav aria-label="Page navigation example">
-            <ul class="pagination justift_end">
-                <li class="page-item">
-                    <a class="page-link"  aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
-                </li>
-                <li class="page-item"><a class="page-link" >1</a></li>
-                <li class="page-item"><a class="page-link" >2</a></li>
-                <li class="page-item"><a class="page-link" >3</a></li>
-                <li class="page-item">
-                    <a class="page-link"  aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
-                </li>
-            </ul>
+            <div class="pagination justift_end">
+              <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
+            </div>
         </nav>
     </div>
-
     <div class="card-footer">
         <button class="btn btn-success">Submit</button>
-        </div>
+    </div>
 </div>
 
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <!-- <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div> -->
         <div class="modal-body">
             <label>Remarks</label>
             <textarea class="form-control" rows="3" placeholder="Enter ..."></textarea>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="save()">Save changes</button>
+          <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="save()">Save    changes</button>
         </div>
       </div>
     </div>
