--- a/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
@@ -57,15 +57,6 @@
                         <div class="card-header">
                             <div class="header_card justify-content-center mb-1">
                                 <h3 class="card-title">Audit Area Details</h3>
-                                
-                                <!-- <div class="d-flex align-items-center">
-                                    <h6 class="mr-1 mb-0">Filters:-</h6>
-                                    <input type="text" [(ngModel)]="vendorName" class="form-control mr-1 filter_css" placeholder="Vendor Name ">
-                                    <input type="date" [(ngModel)]="plannedStartDate" class="form-control mr-1 filter_css" placeholder="Date ">
-                                    <input type="text" [(ngModel)]="statusName" class="form-control mr-1 filter_css" placeholder="Status ">
-                                    <button type="button" (click)="filter()" class="form-control mr-1 filter_css btn btn-primary">Submit </button>
-                                    <button type="button" (click)="reset()" class="form-control mr-1 filter_css btn btn-secondary">Reset</button>
-                                </div> -->
                             </div>
                             <div class="d-flex align-items-center justify-content-center">
                                 <h6 class="mr-1 mb-0">Filters:-</h6>
@@ -95,10 +86,7 @@
                <div class="mt_24">
                 <button type="button" (click)="filter()" class="form-control mr-1 filter_css heigh_60 btn btn-primary"><span>Submit</span> </button>
                 <button type="button" (click)="reset()" class="form-control mr-1 filter_css heigh_60 btn btn-secondary"><span>Reset</span></button>
-                              </div>  <!-- <button class="btn btn-success d-flex  align-items-center">
-                                  <i class="fas fa-upload mr-1 upload_ico"></i>
-                                  <span class="now_rap">Upload Plan</span>
-                                </button> -->
+                              </div>
                               </div>
                         </div>
                         <div class="card-body">
@@ -119,7 +107,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr class="tbody_data" *ngFor="let item of viewPlanListToShow ">
+                                        <tr class="tbody_data" *ngFor="let item of viewPlanListToShow | paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index">
                                          <td>{{item.vendorCode}}</td>
                                          <td>{{item.vendorName}}</td>
                                          <td>{{item.locationName}}</td>
@@ -141,22 +129,10 @@
                                 </table>
                             </div>
                             <nav aria-label="Page navigation example">
-                                <ul class="pagination justift_end">
-                                    <li class="page-item">
-                                        <a class="page-link"  aria-label="Previous">
-                                            <span aria-hidden="true">&laquo;</span>
-                                        </a>
-                                    </li>
-                                    <li class="page-item"><a class="page-link" >1</a></li>
-                                    <li class="page-item"><a class="page-link" >2</a></li>
-                                    <li class="page-item"><a class="page-link" >3</a></li>
-                                    <li class="page-item">
-                                        <a class="page-link"  aria-label="Next">
-                                            <span aria-hidden="true">&raquo;</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </nav>
+                                <div class="pagination justift_end">
+                                  <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
+                                </div>
+                              </nav>
                         </div>
                     </div>
                 </div>
