--- a/src/app/dashboard/manage-audit/manage-audit.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit.component.html
@@ -1,4 +1,4 @@
-<div class="card" style="">
+<div class="card">
   <div class="card-header">
     <div class="header_card">
       <h3 class="card-title">Audit Area Details (Vendor 1)</h3>
