--- a/src/app/dashboard/masters/regulation/regulation-list/regulation-list.component.html
+++ b/src/app/dashboard/masters/regulation/regulation-list/regulation-list.component.html
@@ -23,8 +23,8 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr *ngFor="let item of regulationObj; let i = index;">
-                      <td>{{i+1}}</td>
+                    <tr *ngFor="let item of regulationObj| paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index">
+                      <td>{{(i+1) + pagination.pageSize * ( pagination.pageNumber-1 ) }}</td>
                       <td>{{item.name}}</td>
                       <td>{{item.categoryName}}</td>
                       <td>{{item.auditAreaName}}</td>
@@ -39,21 +39,9 @@
                   </tbody>
                 </table>
                 <nav aria-label="Page navigation example">
-                  <ul class="pagination justift_end">
-                    <li class="page-item">
-                      <a class="page-link" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                      </a>
-                    </li>
-                    <li class="page-item"><a class="page-link">1</a></li>
-                    <li class="page-item"><a class="page-link">2</a></li>
-                    <li class="page-item"><a class="page-link">3</a></li>
-                    <li class="page-item">
-                      <a class="page-link" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                      </a>
-                    </li>
-                  </ul>
+                  <div class="pagination justift_end">
+                    <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
+                  </div>
                 </nav>
               </div>
               </div>
