--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -79,7 +79,7 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item" *ngIf="isSuperAdmin || isPlanner">
-                <a routerLink="/dashboard/create" class="nav-link">
+                <a [routerLink]="['/dashboard/create']" class="nav-link">
                   <img src="../../assets/icons/lightbulb.png" class="side_img">
                   <p>
                     Create Plan
@@ -118,23 +118,15 @@
                   </p>
                 </a>
               </li>
-              <li class="nav-item" *ngIf="isSectionHead"> 
+              <!-- <li class="nav-item" *ngIf="isSectionHead"> 
                 <a routerLink="/dashboard/evidence/section-data" class="nav-link">
                   <img src="../../assets/icons/planning.png" class="side_img">
                   <p>
                     SectionHead Data
                   </p>
                 </a>
-              </li>
-              <li class="nav-item" *ngIf="isSectionHead 
-              || isDPM"> 
-                <a routerLink="/dashboard/evidence/dpm" class="nav-link">
-                  <img src="../../assets/icons/planning.png" class="side_img">
-                  <p>
-                    Report Approval
-                  </p>
-                </a>
-              </li>
+              </li> -->
+            
               <!-- <li class="nav-item" *ngIf="isAuditor"> 
                 <a routerLink="/dashboard/action-plan/action-pending-plan" class="nav-link">
                   <img src="../../assets/icons/planning.png" class="side_img">
@@ -153,6 +145,15 @@
               </p>
             </a>
           </li>
+          <li class="nav-item" *ngIf="isSectionHead 
+          || isDPM"> 
+            <a routerLink="/dashboard/evidence/dpm" class="nav-link">
+              <img src="../../assets/icons/planning.png" class="side_img">
+              <p>
+                Report Approval
+              </p>
+            </a>
+          </li>
           <li class="nav-item" *ngIf="!isVendor">
             <a routerLink="/dashboard/manage-audit" class="nav-link">
               <img src="../../assets/icons/management.png" class="side_img">
@@ -166,7 +167,7 @@
             <a routerLink="/dashboard/action-plan/auditor" class="nav-link">
               <img src="../../assets/icons/management.png" class="side_img">
               <p>
-                Action Plan Auditor
+                Action Plan 
               </p>
             </a>
           </li>
