--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -1,51 +1,51 @@
 <section class="content">
     <div class="container-fluid">
       <div class="d-flex justify-content-center mb-2 flex_direction_media">
-        <a href="" class="child_counter gradien_plan">
+        <a  class="child_counter gradien_plan">
           <div class="">
             <div class="d-flex justify-content-between align-items-center">
               <img src="../../../../assets/icons/counter/shield.png" class="counter_img">
               <p class="color_white mb-0 fon_13">Total Plan</p>
             </div>
             <div>
-              <p class="counter_digit">8</p>
-              <a href=""></a>
+              <p class="counter_digit">{{counters.totalPlanCount}}</p>
+              <a></a>
             </div>
           </div>
         </a>
-        <a href="" class="child_counter gradien_approve">
+        <a  class="child_counter gradien_approve">
           <div class="">
             <div class="d-flex justify-content-between align-items-center">
               <img src="../../../../assets/icons/counter/approve.png" class="counter_img">
               <p class="color_white mb-0 fon_13">Approve Task</p>
             </div>
             <div>
-              <p class="counter_digit">6</p>
-              <a href=""></a>
+              <p class="counter_digit">{{counters.approvedAudits}}</p>
+              <a></a>
             </div>
           </div>
         </a>
-        <a href="" class="child_counter gradien_pending">
+        <a  class="child_counter gradien_pending">
           <div class="">
             <div class="d-flex justify-content-between align-items-center">
               <img src="../../../../assets/icons/counter/pending.png" class="counter_img">
               <p class="color_white mb-0 fon_13">Pending Plan</p>
             </div>
             <div>
-              <p class="counter_digit">6</p>
-              <a href=""></a>
+              <p class="counter_digit">{{counters.pendingAudits}}</p>
+              <a></a>
             </div>
           </div>
         </a>
-        <a href="" class="child_counter gradien_auditor_assign">
+        <a  class="child_counter gradien_auditor_assign">
           <div class="">
             <div class="d-flex justify-content-between align-items-center">
               <img src="../../../../assets/icons/counter/auditor.png" class="counter_img">
               <p class="color_white mb-0 fon_13">Auditor Assign</p>
             </div>
             <div>
-              <p class="counter_digit">6</p>
-              <a href=""></a>
+              <p class="counter_digit">{{counters.auditorAssigned}}</p>
+              <a></a>
             </div>
           </div>
         </a>
@@ -198,19 +198,19 @@
                               <tr>
                                 <td>1</td>
                                 <td>Will make a standard</td>
-                                <td><a href="" data-toggle="tooltip" data-placement="top" title="Click here for download">List of racks</a></td>
+                                <td><a  data-toggle="tooltip" data-placement="top" title="Click here for download">List of racks</a></td>
                                 <td><button class="btn btn-success">closed</button></td>
                               </tr>
                               <tr>
                                 <td>1</td>
                                 <td>Will make a standard</td>
-                                <td><a href="" data-toggle="tooltip" data-placement="top" title="Click here for download">List of racks</a></td>
+                                <td><a  data-toggle="tooltip" data-placement="top" title="Click here for download">List of racks</a></td>
                                 <td><button class="btn btn-primary">Partially Closed</button></td>
                               </tr>
                               <tr>
                                 <td>1</td>
                                 <td>Will make a standard</td>
-                                <td><a href="" data-toggle="tooltip" data-placement="top" title="Click here for download">List of racks</a></td>
+                                <td><a  data-toggle="tooltip" data-placement="top" title="Click here for download">List of racks</a></td>
                                 <td><button class="btn btn-danger">open</button></td>
                               </tr>
                               </tbody>
