--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
@@ -178,7 +178,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" (click)="reportSubmit(final)" class="btn btn-success">Submit</button>
+        <button type="button" data-dismiss="modal" (click)="reportSubmit(final)" class="btn btn-success">Submit</button>
       </div>
     </div>
   </div>
