--- a/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
+++ b/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
@@ -1,62 +1,51 @@
 <section class="content">
     <div>
-        <div class="row" >
+        <div class="row">
             <div class="col-md-12">
                 <div class="card card-default">
                     <div class="card-header">
                         <div class="d-flex justif_space_betwen">
-                        <h3 class="card-title">Create Plan Details</h3>
-                        <div class="d-flex">
-                        <button class="btn btn-primary d-flex align-items-center mr-1">
-                            <i class="fas fa-upload mr-1 upload_ico"></i>
-                            <span class="now_rap">Upload Plan</span>
-                          </button>
-                          <button class="btn btn-success d-flex align-items-center">
-                            <i class="fas fa-upload mr-1 upload_ico"></i>
-                            <span class="now_rap">Download Template</span>
-                          </button>
-                          </div>
-                          </div>
+                            <h3 class="card-title">Create Plan Details</h3>
+                            <div class="d-flex">
+                                <input type="file" (change)="bulkUpload($event)" id="upload" hidden />
+                                <label for="upload" class="button-upload"> <i class="fas fa-upload mr-1 upload_ico"></i>
+                                    <span class="now_rap">Upload Plan</span></label>
+                                <button class="btn btn-success d-flex align-items-center ml-1">
+                                    <i class="fas fa-upload mr-1 upload_ico"></i>
+                                    <span class="now_rap">Download Template</span>
+                                </button>
+                            </div>
+                        </div>
                     </div>
-                      <form [formGroup]="createPlanForm">
+                    <form [formGroup]="createPlanForm">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Vendor Code <span class="start_css">*</span></label>
-                                        <select class="form-control" formControlName="vendorId" 
-                                        (change)="getVendor($event)">
-                                            <option *ngFor="let item of vendorObj" [value]="item.id"> {{item.code}}  </option>
+                                        <select class="form-control" formControlName="vendorId"
+                                            (change)="getVendor($event)">
+                                            <option *ngFor="let item of vendorObj" [value]="item.id"> {{item.code}}
+                                            </option>
                                         </select>
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Vendor Name <span class="start_css">*</span></label>
-                                    
+
                                         <select class="form-control" formControlName="vendorId">
-                                            <option *ngFor="let item of vendorObj" [value]="item.id">   {{item.name }}</option>
+                                            <option *ngFor="let item of vendorObj" [value]="item.id"> {{item.name }}
+                                            </option>
                                         </select>
-                                      
                                     </div>
                                 </div>
-                        <!--         <div class="col-sm-3">
-                                    <div class="form-group">
-                                        <label class="form_label">Vendor Name & <span class="start_css">*</span></label>
-                                        <select class="form-control" formControlName="vendor_name">
-                                            <option>Select Vendor Name</option>
-                                            <option>Vendor1</option>
-                                            <option> Vendor2</option>
-                                            <option>Vendor3</option>
-                                            <option>Vendor4</option>
-                                        </select>
-                                    </div>
-                                </div> -->
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Location <span class="start_css">*</span></label>
                                         <select class="form-control" formControlName="locationId">
-                                            <option  *ngFor="let item of locationObj" [value]="item.id">{{item.name }}</option>
+                                            <option *ngFor="let item of locationObj" [value]="item.id">{{item.name }}
+                                            </option>
                                         </select>
                                     </div>
                                 </div>
@@ -64,40 +53,45 @@
                                     <div class="form-group">
                                         <label class="form_label">Any Other location <span
                                                 class="start_css">*</span></label>
-                                        <input type="text" class="form-control"
-                                        formControlName="otherLocation" placeholder="Type Any Other location">
+                                        <input type="text" class="form-control" formControlName="otherLocation"
+                                            placeholder="Type Any Other location">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Any Other Code <span
                                                 class="start_css">*</span></label>
-                                        <input type="text" class="form-control" placeholder="Type Any Other Code" formControlName="otherCode">
+                                        <input type="text" class="form-control" placeholder="Type Any Other Code"
+                                            formControlName="otherCode">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Type Code</label>
-                                        <input type="text" class="form-control" placeholder="Type Code" formControlName="typeCode">
+                                        <input type="text" class="form-control" placeholder="Type Code"
+                                            formControlName="typeCode">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Type Name</label>
-                                        <input type="text" class="form-control" placeholder="Type Name" formControlName="typeName">
+                                        <input type="text" class="form-control" placeholder="Type Name"
+                                            formControlName="typeName">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Type location</label>
-                                        <input type="text" class="form-control" placeholder="Type location" formControlName="typeLocation">
+                                        <input type="text" class="form-control" placeholder="Type location"
+                                            formControlName="typeLocation">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">Planned Start Date <span
                                                 class="start_css">*</span></label>
-                                        <input type="date" class="form-control inputbox_css" formControlName="plannedStartDate">
+                                        <input type="date" class="form-control inputbox_css"
+                                            formControlName="plannedStartDate">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
@@ -105,7 +99,7 @@
                                         <label class="form_label">Planned End Date <span
                                                 class="start_css">*</span></label>
                                         <input type="date" class="form-control inputbox_css"
-                                        formControlName="plannedEndDate">
+                                            formControlName="plannedEndDate">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
@@ -113,8 +107,7 @@
                                         <label class="form_label">
                                             Additional MSIL email
                                         </label>
-                                        <input type="text" class="form-control" 
-                                            placeholder="Enter Auditee MSIL email"
+                                        <input type="text" class="form-control" placeholder="Enter Auditee MSIL email"
                                             formControlName="additionalMSILEmail">
                                     </div>
                                 </div>
@@ -123,8 +116,7 @@
                                         <label class="form_label">
                                             Auditee email id <span class="start_css">*</span>
                                         </label>
-                                        <input type="text" class="form-control" 
-                                            placeholder="xyz@gmail.com" 
+                                        <input type="text" class="form-control" placeholder="xyz@gmail.com"
                                             formControlName="auditeeEmail">
                                     </div>
                                 </div>
@@ -133,16 +125,8 @@
                                         <label class="form_label">
                                             Upload File
                                         </label>
-                                        <!-- <div class="input-group">
-                                            <div class="custom-file">
-                                                <input type="file" class="custom-file-input" 
-                                                (change)="onFileSelected($event)" id="exampleInputFile" formControlName="attachment">
-                                                <label class="custom-file-label" >Choose
-                                                    file</label>
-                                            </div>
-                                        </div> -->
-
-                                        <input type="file" id="exampleInputFile"  (change)="onFileSelected($event)"  formControlName="attachment" class="form-control">
+                                        <input type="file" id="exampleInputFile" (change)="onFileSelected($event)"
+                                            formControlName="attachment" class="form-control">
                                     </div>
                                 </div>
                             </div>
