action plan evidence changes

--- a/src/app/dashboard/action-plan/action-plan-observation/action-plan-observation.component.html
+++ b/src/app/dashboard/action-plan/action-plan-observation/action-plan-observation.component.html
@@ -28,8 +28,10 @@
                         <td>{{i+1}}.1</td>
                         <td>{{item.remarkOfAuditor}}</td>
                         <td><textarea [(ngModel)]="item.detailOfImprovement" class="form-control"></textarea></td>
-                        <td><textarea [(ngModel)]="item.incharge" class="form-control"></textarea></td>
-                        <td><input [(ngModel)]="item.dateOfSubmission" type="date"></td>
+                        <td><textarea [(ngModel)]="item.incharge" class="form-control"></textarea>
+                        </td>
+                        <!-- <td *ngIf="item.dateOfSubmission">{{item.dateOfSubmission | date:dateFormat}}</td> -->
+                        <td ><input [(ngModel)]="item.dateOfSubmission" type="date"></td>
                     </tr>
                 </tbody>
             </table>
