back button on every page

--- a/src/app/dashboard/action-plan/action-plan-category-vendor/action-plan-category-vendor.component.html
+++ b/src/app/dashboard/action-plan/action-plan-category-vendor/action-plan-category-vendor.component.html
@@ -33,6 +33,9 @@
                             </div>
                         </nav>
                     </div>
+                    <div class="card-footer">
+                        <button (click)="back()" class="btn btn-default">Back</button>
+                    </div>
                 </div>
             </div>
         </div>
