--- a/src/app/dashboard/action-plan/action-plan-observation/action-plan-observation.component.html
+++ b/src/app/dashboard/action-plan/action-plan-observation/action-plan-observation.component.html
@@ -44,5 +44,7 @@
     </div>
     <div class="card-footer">
         <button (click)="submit()" class="btn btn-success">Submit</button>
-        </div>
+         <button (click)="back()" class="btn btn-default">Back</button>
+
+     </div>
 </div>
