--- a/src/app/dashboard/evidence/evidence-received/evidence-received.component.html
+++ b/src/app/dashboard/evidence/evidence-received/evidence-received.component.html
@@ -65,7 +65,7 @@
         </nav>
     </div>
     <div class="card-footer">
-        <button class="btn btn-success">Submit</button>
+        <button (click)="back()" class="btn btn-default">Back</button>
     </div>
 </div>
 
