--- a/src/app/dashboard/action-plan/action-plan-update/action-plan-update.component.html
+++ b/src/app/dashboard/action-plan/action-plan-update/action-plan-update.component.html
@@ -36,13 +36,16 @@
                 </tbody>
             </table>
         </div>
+       
+    </div>
+
+    <div class="card-footer">
+        <button (click)="submit()" class="btn btn-success">Submit</button>
+        <button (click)="back()" class="btn btn-default">Back</button>
+        </div>
         <nav aria-label="Page navigation example">
             <div class="pagination justift_end">
               <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
             </div>
           </nav>
-    </div>
-    <div class="card-footer">
-        <button (click)="submit()" class="btn btn-success">Submit</button>
-        </div>
 </div>
